--- a/Source/PawnPlus.Core/Views/Main.xaml
+++ b/Source/PawnPlus.Core/Views/Main.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="PawnPlus.Core.Windows.Main"
+﻿<Window x:Class="PawnPlus.Core.Views.Main"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PawnPlus.Core.Windows"
+        xmlns:local="clr-namespace:PawnPlus.Core.Views"
         mc:Ignorable="d"
         Title="PawnPlus" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/PawnPlus.Core;component/Resources/Icons/Icon.ico">
     <Grid>
