--- a/Source/PawnPlus.Core/Views/Main.xaml
+++ b/Source/PawnPlus.Core/Views/Main.xaml
@@ -1,12 +1,52 @@
-﻿<Window x:Class="PawnPlus.Core.Views.Main"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PawnPlus.Core.Views"
+        xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock" x:Class="PawnPlus.Core.Views.Main"
         mc:Ignorable="d"
-        Title="PawnPlus" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/PawnPlus.Core;component/Resources/Icons/Icon.ico">
+        Title="PawnPlus" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/PawnPlus.Core;component/Resources/Icons/Icon.ico" Loaded="Window_Loaded" ResizeMode="CanResizeWithGrip">
     <Grid>
-        
+        <DockPanel Margin="0" Background="#FFF0F0F0">
+            <StatusBar Margin="0" DockPanel.Dock="Bottom" Background="#FF007ACC" Foreground="White">
+                <StatusBar.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Grid MinWidth="300">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="Auto" MinWidth="60"/>
+                                <ColumnDefinition Width="Auto" MinWidth="60"/>
+                            </Grid.ColumnDefinitions>
+                        </Grid>
+                    </ItemsPanelTemplate>
+                </StatusBar.ItemsPanel>
+
+                <StatusBarItem x:Name="statusLabel" Grid.Column="0" HorizontalAlignment="Left" Content="Label"/>
+                <StatusBarItem x:Name="versionLabel" Grid.Column="1" HorizontalAlignment="Center" Content="Version 0.0.0"/>
+                <StatusBarItem x:Name="lineLabel" Grid.Column="2" Content="Line 1"/>
+                <StatusBarItem x:Name="columnLabel" Grid.Column="3" Content="Column 1"/>
+            </StatusBar>
+            <Menu x:Name="menu" DockPanel.Dock="Top">
+                <MenuItem Header="File">
+                    <MenuItem Header="New">
+                        <MenuItem Header="Project"/>
+                        <MenuItem Header="File"/>
+                    </MenuItem>
+                    <MenuItem Header="Open">
+                        <MenuItem Header="Project"/>
+                        <MenuItem Header="File"/>
+                    </MenuItem>
+                    <Separator/>
+                    <MenuItem Header="Edit"/>
+                    <Separator/>
+                    <MenuItem Header="Exit"/>
+                </MenuItem>
+            </Menu>
+            <xcad:DockingManager x:Name="dockingManager" />
+        </DockPanel>
+
+
     </Grid>
 </Window>
