--- a/Source/PawnPlus.Core/Views/Main.xaml
+++ b/Source/PawnPlus.Core/Views/Main.xaml
@@ -4,9 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PawnPlus.Core.Views"
-        xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock" x:Class="PawnPlus.Core.Views.Main"
+        xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock" x:Name="PawnPlus_MainFrame" x:Class="PawnPlus.Core.Views.Main"
         mc:Ignorable="d"
-        Title="PawnPlus" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/PawnPlus.Core;component/Resources/Icons/Icon.ico" Loaded="Window_Loaded" ResizeMode="CanResizeWithGrip">
+        Title="PawnPlus" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/PawnPlus.Core;component/Resources/Icons/Icon.ico" Loaded="PawnPlus_Loaded" ResizeMode="CanResizeWithGrip" KeyDown="PawnPlus_KeyDown" Closing="PawnPlus_Closing">
     <Grid>
         <DockPanel Margin="0" Background="#FFF0F0F0">
             <StatusBar Margin="0" DockPanel.Dock="Bottom" Background="#FF007ACC" Foreground="White">
