--- a/Source/PawnPlus.Core/Views/Main.xaml
+++ b/Source/PawnPlus.Core/Views/Main.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PawnPlus.Core.Views"
         xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock" x:Name="PawnPlus_MainFrame" x:Class="PawnPlus.Core.Views.Main"
         mc:Ignorable="d"
-        Title="PawnPlus" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/PawnPlus.Core;component/Resources/Icons/Icon.ico" Loaded="PawnPlus_Loaded" ResizeMode="CanResizeWithGrip" KeyDown="PawnPlus_KeyDown" Closing="PawnPlus_Closing">
+        Title="PawnPlus" WindowStartupLocation="CenterScreen" Icon="/PawnPlus.Core;component/Resources/Icons/Icon.ico" Loaded="PawnPlus_Loaded" ResizeMode="CanResizeWithGrip" KeyDown="PawnPlus_KeyDown" Closing="PawnPlus_Closing">
     <Grid>
         <DockPanel Margin="0" Background="#FFF0F0F0">
             <StatusBar Margin="0" DockPanel.Dock="Bottom" Background="#FF007ACC" Foreground="White">
